[metadata]
name = msl-reports
version = 0.0.0
author = Ari Essunfeld
author_email = ariessunfeld@gmail.com
description = A python API for the MSL Reports site
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires =
	bs4
	python-dotenv
	requests
	selenium
